# work

./: .env.example  .gitignore  .pr-intent.md  CLAUDE.md  DESIGN.md  EXTRACTION_PLAN.md  README.md  SIMPLIFY.md  V0.6-vault-design.md  done.md  goodsoob-work-plan.md  index.html  package.json  progress.md  todo.md  vite.config.ts
.github/workflows/: ci.yml
.lane/: atlas.md
mobile/: .gitignore  README.md
mobile/App/: project.yml
mobile/VaultKit/: Package.swift
mock-vault/: README.md  inbox.md
mock-vault/journals/: 2026-05-15.md  2026-05-16.md
mock-vault/meetings/: 2026-05-12-제품-1on1.md  2026-05-16-팀-주간회의.md
mockups/: portfolio-cards.html
scripts/: capture-window.sh  extract-inline-images.mjs  find-window.swift  gen-icons.ts  import-keep.mjs  import-screenshot.sh  migrate-obsidian-embeds.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  portfolio.json
src-tauri/icons/: icon.icns
src-tauri/src/: gcal.rs  lib.rs
src/api/: journals.ts  meetings.test.ts  meetings.ts  portfolio.test.ts  portfolio.ts  routines.test.ts  routines.ts  schedule.ts  schedules.ts  scratch.ts  taskProjects.ts  tasks.test.ts  tasks.ts  todos.ts
src/components/: ConfirmDialog.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: sidebarToggle.tsx  useAuth.ts  useDebouncedSave.ts  useDrawer.tsx  useGcalSync.tsx  useGlobalSearchIndex.ts  useJournals.ts  useMeetingSort.ts  useMeetings.ts  usePortfolio.ts  usePortfolioCategoryFilter.ts  usePortfolioSort.ts  useRoutines.ts  (+18 more)
supabase/: config.toml
(+241 files in other folders)
