[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# Google Calendar 연동 (T2). reqwest/sha2/base64/rand/url 은 이미 트리에 있던 걸
# 직접 dep 으로 승격 (+ reqwest 의 json/TLS 활성). keyring 만 신규 — macOS keychain 직결.
reqwest = { version = "0.13", features = ["json"] }
keyring = { version = "3", features = ["apple-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
